--- a/css/section/top.css
+++ b/css/section/top.css
@@ -11,9 +11,16 @@
   text-align: center;
   display: flex;
   flex-direction: column;
+  opacity: 0.5;
 }
 
 #weather {
   font-size: 26px;
-  opacity: 0.7;
+  opacity: 0.5;
+}
+
+#quote:hover,
+#weather:hover {
+  opacity: 1;
+  transition: opacity 1s ease-in-out;
 }
